# OLS-CUDA

./: .gitignore  CMakeLists.txt  GPUOLS.sln  GPUOLS.vcxproj  README.md  gpu_timer.hpp  kernel.cu  matrix.cu  ols.cu  ols.cuh  pyproject.toml
src/: kernel.cu  matrix.cu  matrix.cuh  ols.cuh  python_bindings.cu
